gcc/testsuite/gdc.test/compilable/imports/pkg11847/package.d
module pkg11847;

int func() { return 1; }
