gcc/testsuite/gdc.test/fail_compilation/imports/a17625.d
module a17625;

private int boo() { return 69; }
